# gatta

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  test_rust_backend.did
src/test_rust_backend/: Cargo.toml
src/test_rust_backend/src/: lib.rs
src/test_rust_backend/src/service/: mod.rs  test_rust_backend.rs
src/test_rust_frontend/: package.json
src/test_rust_frontend/src/: App.js
